syntax = "proto3";

package health;

option go_package = "userservice/healthservice";

service Health {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {

}

message HealthCheckResponse {
  string status = 1;
}
